[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cards/Deck.gd" type="Script" id=1]
[ext_resource path="res://Effects/Focus2.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -83.4386, 5.65685, 83.4386, -5.65685, 236.721, 27.4162, -240.416, -3.21865e-06, 240.416, 3.21865e-06, 515.321, -22.0813, -107.48, -28.2842, 107.48, 28.2842, 792.507, 30.2446 )
}

[node name="Deck" type="Node2D"]
script = ExtResource( 1 )

[node name="FocusLevel" type="Sprite" parent="."]
modulate = Color( 0.0235294, 0.388235, 0.372549, 1 )
position = Vector2( 35, -164.645 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 192, 64 )

[node name="Focus" type="Sprite" parent="."]
modulate = Color( 0.0980392, 0.862745, 0.862745, 1 )
position = Vector2( 35, -164.645 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 192, 64 )

[node name="Label2" type="Label" parent="."]
margin_left = 34.4142
margin_top = -188.23
margin_right = 115.414
margin_bottom = -166.23
text = "Focus Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 892.369
margin_top = -151.321
margin_right = 970.369
margin_bottom = -127.321
text = "End turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardPile" type="Position2D" parent="."]
position = Vector2( 938, 4 )

[node name="DrawPile" type="Position2D" parent="."]
position = Vector2( 86, 8 )

[node name="Label" type="Label" parent="."]
margin_left = 910.0
margin_top = -173.0
margin_right = 959.0
margin_bottom = -92.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turnstate" type="Label" parent="."]
margin_left = 14.0
margin_top = -88.0
margin_right = 99.0
margin_bottom = -51.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 12.7279, 2.82843 )
curve = SubResource( 1 )

[node name="DiscardFor" type="Label" parent="."]
margin_left = 842.0
margin_top = -277.0
margin_right = 1018.0
margin_bottom = -263.0
text = "Discard remaining hand for:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementButton" type="Button" parent="."]
margin_left = 886.0
margin_top = -256.0
margin_right = 967.0
margin_bottom = -236.0
text = "Movement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="."]
margin_left = 886.0
margin_top = -231.0
margin_right = 967.0
margin_bottom = -211.0
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenceButton" type="Button" parent="."]
margin_left = 885.0
margin_top = -205.0
margin_right = 966.0
margin_bottom = -185.0
text = "Defence"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MovementButton" to="." method="_on_MovementButton_pressed"]
[connection signal="pressed" from="AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="DefenceButton" to="." method="_on_DefenceButton_pressed"]
